--- a/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
+++ b/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
@@ -425,17 +425,17 @@
                                     <rect key="frame" x="0.0" y="0.0" width="449" height="238"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ou-U2-yuu">
-                                            <rect key="frame" x="7" y="8" width="363" height="36"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.25000000000000006" translatesAutoresizingMaskIntoConstraints="NO" id="5ou-U2-yuu">
+                                            <rect key="frame" x="7" y="5" width="328" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="36" id="3NQ-BW-Cxx"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.3843137254901961" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fav" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5T-y1-9F0">
-                                            <rect key="frame" x="37" y="218" width="19" height="14"/>
+                                            <rect key="frame" x="30" y="218" width="19" height="14"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="19" id="5uJ-V0-aIL"/>
                                             </constraints>
@@ -444,10 +444,10 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lh0-nR-0CB">
-                                            <rect key="frame" x="8" y="213" width="20" height="20"/>
+                                            <rect key="frame" x="8" y="215" width="18" height="18"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="20" id="1Gz-pj-CZU"/>
-                                                <constraint firstAttribute="width" constant="20" id="L4N-sW-aEv"/>
+                                                <constraint firstAttribute="height" constant="18" id="1Gz-pj-CZU"/>
+                                                <constraint firstAttribute="width" constant="18" id="L4N-sW-aEv"/>
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="27" id="bQ1-M1-dsw"/>
                                             </constraints>
                                             <state key="normal" image="star_selected">
@@ -459,35 +459,36 @@
                                                 </mask>
                                             </variation>
                                         </button>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PrW-Aq-isH" userLabel="TagContainerView">
-                                            <rect key="frame" x="108" y="213" width="333" height="20"/>
-                                            <color key="backgroundColor" red="0.98888701199999995" green="0.83429839920000004" blue="0.25584365199999998" alpha="1" colorSpace="calibratedRGB"/>
-                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.79999999999999982" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0aU-ba-otk" userLabel="pubTimeLabel">
+                                            <rect key="frame" x="369" y="13" width="72" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="Y9p-78-6Yi"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="bottom" secondItem="Lh0-nR-0CB" secondAttribute="bottom" id="18p-Jh-bnZ"/>
                                     <constraint firstItem="5ou-U2-yuu" firstAttribute="leading" secondItem="Lh0-nR-0CB" secondAttribute="leading" constant="-1" id="5rY-eL-J1k"/>
+                                    <constraint firstItem="0aU-ba-otk" firstAttribute="top" secondItem="ofn-8O-7Z8" secondAttribute="topMargin" constant="5" id="6jG-IX-vsc"/>
                                     <constraint firstItem="Lh0-nR-0CB" firstAttribute="leading" secondItem="ofn-8O-7Z8" secondAttribute="leadingMargin" id="8hI-tH-vqn"/>
-                                    <constraint firstItem="G5T-y1-9F0" firstAttribute="leading" secondItem="Lh0-nR-0CB" secondAttribute="trailing" constant="9" id="8uf-gv-R7q"/>
-                                    <constraint firstAttribute="trailing" secondItem="PrW-Aq-isH" secondAttribute="trailing" constant="8" id="9mI-5h-KRP"/>
-                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="height" secondItem="Lh0-nR-0CB" secondAttribute="height" id="GhB-ww-PP1"/>
-                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="leading" secondItem="G5T-y1-9F0" secondAttribute="trailing" constant="52" id="JpB-Ie-DDB"/>
+                                    <constraint firstItem="G5T-y1-9F0" firstAttribute="leading" secondItem="Lh0-nR-0CB" secondAttribute="trailing" constant="4" id="8uf-gv-R7q"/>
                                     <constraint firstAttribute="bottomMargin" secondItem="G5T-y1-9F0" secondAttribute="bottom" constant="-2" id="Uc1-Cx-e14"/>
-                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="bottom" secondItem="ofn-8O-7Z8" secondAttribute="bottomMargin" constant="3" id="Z0H-xB-YAc"/>
-                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="trailing" secondItem="ofn-8O-7Z8" secondAttribute="trailingMargin" id="cJ5-1e-eE6"/>
-                                    <constraint firstItem="G5T-y1-9F0" firstAttribute="centerY" secondItem="Lh0-nR-0CB" secondAttribute="centerY" constant="2" id="ccF-Pc-kp4"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="5ou-U2-yuu" secondAttribute="trailing" constant="71" id="osF-sc-cUR"/>
-                                    <constraint firstItem="5ou-U2-yuu" firstAttribute="top" secondItem="ofn-8O-7Z8" secondAttribute="topMargin" id="wx9-Hq-T00"/>
+                                    <constraint firstItem="G5T-y1-9F0" firstAttribute="centerY" secondItem="Lh0-nR-0CB" secondAttribute="centerY" constant="1" id="ccF-Pc-kp4"/>
+                                    <constraint firstItem="0aU-ba-otk" firstAttribute="leading" secondItem="5ou-U2-yuu" secondAttribute="trailing" constant="34" id="ocN-3e-o6K"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="5ou-U2-yuu" secondAttribute="trailing" constant="106" id="osF-sc-cUR"/>
+                                    <constraint firstItem="5ou-U2-yuu" firstAttribute="top" secondItem="ofn-8O-7Z8" secondAttribute="topMargin" constant="-3" id="wx9-Hq-T00"/>
                                     <constraint firstItem="Lh0-nR-0CB" firstAttribute="bottom" secondItem="ofn-8O-7Z8" secondAttribute="bottomMargin" constant="3" id="ylX-b6-YE6"/>
                                 </constraints>
                                 <size key="customSize" width="449" height="238"/>
                                 <connections>
                                     <outlet property="appTitle" destination="5ou-U2-yuu" id="1Gq-nU-dPe"/>
                                     <outlet property="favButton" destination="Lh0-nR-0CB" id="7iM-b2-jJh"/>
-                                    <outlet property="tagContainerView" destination="PrW-Aq-isH" id="9ZA-zN-gCY"/>
+                                    <outlet property="pubTimeLabel" destination="0aU-ba-otk" id="RqJ-5W-coU"/>
                                     <segue destination="ApE-rD-vO8" kind="show" identifier="showCellDetail" id="mq1-GV-APK"/>
                                 </connections>
                             </collectionViewCell>
@@ -525,7 +526,7 @@
     </scenes>
     <resources>
         <image name="UIActivityTumblr~ipad.png" width="25" height="41"/>
-        <image name="star_selected" width="55" height="53"/>
+        <image name="star_selected" width="55" height="52"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="mq1-GV-APK"/>
