--- a/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
+++ b/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
@@ -399,37 +399,52 @@
             </objects>
             <point key="canvasLocation" x="2077" y="2913"/>
         </scene>
-        <!--Thing Rank-->
-        <scene sceneID="dld-Ug-JJC">
+        <!--Top Fav-->
+        <scene sceneID="56l-sd-nfG">
             <objects>
-                <viewController title="Thing Rank" id="AER-ib-Zn8" customClass="RankViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="fU4-4d-X6S"/>
-                        <viewControllerLayoutGuide type="bottom" id="Ewa-ae-jcj"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="SLu-ZZ-nyY">
+                <tableViewController title="Top Fav" id="fHH-df-SDW" customClass="RankViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="t0V-xg-oWz">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Comming Soon" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.30000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="cXY-f5-nZa">
-                                <rect key="frame" x="122" y="257" width="357" height="86"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="14"/>
-                                <color key="textColor" red="0.3843137254901961" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="cXY-f5-nZa" firstAttribute="centerX" secondItem="SLu-ZZ-nyY" secondAttribute="centerX" id="a3Z-XI-9VB"/>
-                            <constraint firstItem="cXY-f5-nZa" firstAttribute="top" secondItem="fU4-4d-X6S" secondAttribute="bottom" constant="193" id="bSj-g5-lAM"/>
-                            <constraint firstItem="cXY-f5-nZa" firstAttribute="centerY" secondItem="SLu-ZZ-nyY" secondAttribute="centerY" id="xN7-rc-EtA"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Thing Rank" id="Zvi-9W-nY4"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gE6-Lq-Tdb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="rankCell" textLabel="oWv-G6-PXw" detailTextLabel="ztW-Fv-9vT" rowHeight="60" style="IBUITableViewCellStyleValue1" id="1iH-9A-DxO" customClass="RankTableViewCell">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1iH-9A-DxO" id="scX-gl-C6Y">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oWv-G6-PXw">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="20"/>
+                                            <color key="textColor" red="0.38431372549999998" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" alpha="0.74999999999999978" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ztW-Fv-9vT">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="16"/>
+                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <connections>
+                                    <outlet property="detailLabel" destination="ztW-Fv-9vT" id="vNe-i8-nve"/>
+                                    <outlet property="titleLabel" destination="oWv-G6-PXw" id="R2K-lH-q5P"/>
+                                    <segue destination="ApE-rD-vO8" kind="show" identifier="showFavDetail" id="iMh-j9-5sV"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="fHH-df-SDW" id="f8S-6w-vwd"/>
+                            <outlet property="delegate" destination="fHH-df-SDW" id="uEY-2g-aDP"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Top Fav" id="RKe-Jg-J75"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y7A-TV-m9V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2129" y="2061"/>
+            <point key="canvasLocation" x="2120" y="2061"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="a5f-bW-BO5">
@@ -443,7 +458,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="vaM-cH-sCh" kind="relationship" relationship="viewControllers" id="ast-CO-j7x"/>
-                        <segue destination="Zx5-Oh-xVl" kind="relationship" relationship="viewControllers" id="XPk-6t-H2y"/>
+                        <segue destination="vYf-P7-GNg" kind="relationship" relationship="viewControllers" id="OdK-G1-r9t"/>
                         <segue destination="jzv-aw-uu7" kind="relationship" relationship="viewControllers" id="QAv-XB-nk5"/>
                         <segue destination="U1F-um-1jD" kind="relationship" relationship="viewControllers" id="O1R-Nh-ou2"/>
                     </connections>
@@ -470,25 +485,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="psG-a0-cJQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1206" y="1214"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="fN9-sZ-KQ4">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Zx5-Oh-xVl" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="mostViewed" id="9hj-9u-hGx"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="veb-dU-Fmd">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="AER-ib-Zn8" kind="relationship" relationship="rootViewController" id="0yS-wI-aYW"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="G5y-M0-Rj1" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1169" y="2071"/>
         </scene>
         <!--One Thing Well-->
         <scene sceneID="oIt-TR-gXD">
@@ -812,6 +808,25 @@
             </objects>
             <point key="canvasLocation" x="1198" y="3779"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="3p5-E5-G1y">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vYf-P7-GNg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="mostViewed" id="g4z-9M-VB8"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2NK-Br-uqh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fHH-df-SDW" kind="relationship" relationship="rootViewController" id="ynP-qK-QSY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fyr-qG-MfN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1206" y="2053"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Cross" width="51" height="50"/>
@@ -819,6 +834,6 @@
         <image name="star_selected" width="55" height="52"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="mq1-GV-APK"/>
+        <segue reference="iMh-j9-5sV"/>
     </inferredMetricsTieBreakers>
 </document>
