--- a/lab/MailCat/MailCat/Base.lproj/Main.storyboard
+++ b/lab/MailCat/MailCat/Base.lproj/Main.storyboard
@@ -1,13 +1,70 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="J5r-Zr-DZJ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="方正清刻本悦宋简体.ttf">
+            <string>FZQKBYSJW--GB1-0</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Entrance View Controller-->
+        <scene sceneID="Yfr-hD-jre">
+            <objects>
+                <viewController id="J5r-Zr-DZJ" customClass="EntranceViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dvl-GA-F25"/>
+                        <viewControllerLayoutGuide type="bottom" id="Cw7-UG-bUQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tfz-Uc-kjt">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="paper" translatesAutoresizingMaskIntoConstraints="NO" id="gWD-IT-lc4">
+                                <rect key="frame" x="103" y="293" width="394" height="254"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="254" id="bEr-Yt-9Iw"/>
+                                    <constraint firstAttribute="width" constant="394" id="pbD-Y2-o5O"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder" translatesAutoresizingMaskIntoConstraints="NO" id="3X3-c2-hjj">
+                                <rect key="frame" x="154" y="417" width="293" height="175"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="175" id="AuA-df-UiX"/>
+                                    <constraint firstAttribute="width" constant="293" id="aLG-Vs-t1b"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="3X3-c2-hjj" secondAttribute="centerX" id="O3l-Xn-B5l"/>
+                            <constraint firstItem="Cw7-UG-bUQ" firstAttribute="top" secondItem="3X3-c2-hjj" secondAttribute="bottom" constant="8" id="T1a-Mg-prA"/>
+                            <constraint firstAttribute="centerX" secondItem="gWD-IT-lc4" secondAttribute="centerX" id="caV-xd-bIE"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="b8e-DV-Vb7" appends="YES" id="7iw-hI-kK6"/>
+                        </connections>
+                    </view>
+                    <connections>
+                        <outlet property="folderImageView" destination="3X3-c2-hjj" id="g2W-hZ-OFg"/>
+                        <outlet property="paperImageView" destination="3X3-c2-hjj" id="lRb-hI-IQS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YKb-GP-Ls8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="b8e-DV-Vb7">
+                    <connections>
+                        <action selector="handlePanUpGesture:" destination="J5r-Zr-DZJ" id="lcW-3m-aXx"/>
+                    </connections>
+                </panGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="298" y="-604"/>
+        </scene>
+        <!--Writing-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Writing" title="Writing" id="vXZ-lx-hvc" customClass="WritingViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -16,28 +73,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PhN-9q-sfW">
-                                <rect key="frame" x="16" y="20" width="264" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="称谓:" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PhN-9q-sfW">
+                                <rect key="frame" x="16" y="45" width="114" height="30"/>
+                                <fontDescription key="fontDescription" name="FZQKBYSJW--GB1-0" family="FZQingKeBenYueSongS-R-GB" pointSize="19"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="COx-N5-Gmg">
-                                <rect key="frame" x="16" y="66" width="264" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SXk-YC-onR">
-                                <rect key="frame" x="16" y="113" width="46" height="30"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1fy-mq-99t">
+                                <rect key="frame" x="48" y="90" width="524" height="419"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="阿斯蒂芬">
+                                        <attributes>
+                                            <font key="NSFont" size="12" name="STHeitiSC-Light"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="3Lg-tX-q88" appends="YES" id="EJp-xO-WKe"/>
+                            <outletCollection property="gestureRecognizers" destination="Ea0-1S-2Bd" appends="YES" id="n4a-I9-qaB"/>
+                        </connections>
                     </view>
+                    <connections>
+                        <outlet property="bodyTextView" destination="1fy-mq-99t" id="Zfi-aB-Iws"/>
+                        <outlet property="titleField" destination="PhN-9q-sfW" id="YhP-3x-2cL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="3Lg-tX-q88">
+                    <connections>
+                        <action selector="cancelEditing:" destination="vXZ-lx-hvc" id="jsa-eU-Wib"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="Ea0-1S-2Bd">
+                    <connections>
+                        <action selector="handlePanUpGesture:" destination="vXZ-lx-hvc" id="R1O-m8-itM"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="folder" width="396" height="207"/>
+        <image name="paper" width="366" height="376"/>
+    </resources>
 </document>
